# web-rtc

./: README.md
client/: package-lock.json  package.json
client/src/: App.css  App.tsx
client/src/components/: JoinForm.tsx  VideoChat.tsx  VideoPlayer.tsx
client/src/store/: usePeerStore.ts
server/: Cargo.toml
server/src/: main.rs
