[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.20", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.108"
uuid = { version = "1.5.1", features = ["v4"] }
futures = "0.3.30"
